# nextline-rdb

./: .gitignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pypi.yml  test.yml  type-check.yml  unit-test-min.yml  unit-test.yml
ci/latest/: requirements.txt
ci/minimum/: requirements.txt
src/nextline_rdb/: __about__.py  __init__.py  alembic.ini  db.py  default.toml  init.py  models.py  pagination.py  plugin.py  write.py
src/nextline_rdb/alembic/: README.md  alembic.ini  conftest.py  env.py  script.py.mako
src/nextline_rdb/alembic/models/: conftest.py
src/nextline_rdb/alembic/models/rev_245c4152e8d7/: model_script.py
src/nextline_rdb/alembic/models/rev_4dc6a93dfed8/: model_prompt.py
src/nextline_rdb/alembic/models/rev_5a08750d6760/: __init__.py  model_stdout.py  prompt.py  run.py  stdout.py  trace.py
src/nextline_rdb/alembic/models/rev_6e3cf7d9b6bf/: model_run.py  model_script.py  model_trace.py
src/nextline_rdb/alembic/models/rev_f3edea6dbde2/: __init__.py  model_prompt.py  model_run.py  model_trace_call.py
src/nextline_rdb/alembic/models/rev_f9a742bb2297/: __init__.py  conftest.py  model_run.py
src/nextline_rdb/alembic/versions/: 2022-03-14_14:00-de90b787e92f.py  2022-03-16_19:01-5a08750d6760.py  2024-01-29_14:12-2fa41efc56f0.py  2024-01-29_15:11-6e3cf7d9b6bf.py  2024-01-29_16:33-cafceacada62.py  2024-01-30_13:48-f9a742bb2297.py  2024-02-02_14:02-c72fa3ee6a1a.py  2024-02-02_15:38-245c4152e8d7.py  2024-02-03_14:13-68cb1c590d1f.py  2024-02-04_09:01-4dc6a93dfed8.py  2024-06-07_08:11-8d24d9c2e9ba.py  2024-06-07_13:43-269c15476fb1.py  2024-06-07_15:17-ab0fe7b96033.py  2024-06-07_16:06-2cf3fc3d3dc5.py  2024-06-10_09:42-f3edea6dbde2.py  2024-06-10_10:15-5a61f247dd07.py  2024-06-10_11:39-f433a0a15c7e.py  2024-06-10_12:02-15003e123b98.py
src/nextline_rdb/db/: __init__.py  adb.py  const.py  db_.py
src/nextline_rdb/models/: __init__.py  base.py  hello.py  model_hello.py  model_prompt.py  model_run.py  model_script.py  model_stdout.py  model_trace.py  model_trace_call.py  prompt.py  run.py  stdout.py  trace.py
src/nextline_rdb/models/base/: __init__.py  convention.py  repr_.py
src/nextline_rdb/models/strategies/: __init__.py  prompt.py  run.py  st_instance.py  st_prompt.py  st_run.py  st_script.py  st_stdout.py  st_trace.py  st_trace_call.py  stdout.py  trace.py  utils.py
src/nextline_rdb/models/strategies/tests/: funcs.py  test_prompt.py  test_run.py  test_run_list.py  test_st_instance_list.py  test_st_prompt.py  test_st_prompt_list.py  test_st_run.py  test_st_run_list.py  test_st_script.py  test_st_script_list.py  test_st_started_at_ended_at.py  test_st_stdout.py  test_st_stdout_list.py  test_st_trace.py  test_st_trace_call.py  test_st_trace_call_list.py  test_st_trace_list.py  test_stdout.py  test_stdout_list.py  test_trace.py  test_trace_list.py
src/nextline_rdb/models/tests/: test_cascade.py  test_model_run.py  test_model_script.py  test_model_trace_call.py  test_prompt.py  test_repr.py  test_trace.py
src/nextline_rdb/schema/: mutation.py  query.py  types.py
src/nextline_rdb/schema/nodes/: __init__.py  prompt_node.py  run_node.py  stdout_node.py  trace_call_node.py  trace_node.py
src/nextline_rdb/schema/pagination/: connection.py  db.py
src/nextline_rdb/tests/strategies/models/: __init__.py  prompt.py  run.py  stdout.py
src/nextline_rdb/utils/: __init__.py  egraphql.py  gen.py  sa.py  safe.py  strategies.py  until.py  url.py  utc.py
src/nextline_rdb/utils/strategies/: __init__.py  datetime.py  misc.py
src/nextline_rdb/write/: __init__.py  async_.py  sync.py  write_prompt_table.py  write_run_table.py  write_script_table.py  write_stdout_table.py  write_trace_call_table.py  write_trace_table.py
tests/: adb.py  conftest.py  db.py  test_acyn_db.py  test_async_db.py  test_db.py  test_db_2.py  test_init.py  test_models.py  test_plugin.py  test_version.py  test_write.py
tests/alembic/: conftest.py  test_dynaconf.py  test_run_check.py  test_up_to_date.py
tests/alembic/migrations/: conftest.py  db.py  test_2024-01-29_16:33-cafceacada62.py  test_2024-01-30_13:48-f9a742bb2297.py  test_2024-02-02_14:02-c72fa3ee6a1a.py  test_2024-02-02_15:38-245c4152e8d7.py  test_2024-02-03_14:13-68cb1c590d1f.py  test_2024-02-04_09:01-4dc6a93dfed8.py  test_2024-06-07_08:11-8d24d9c2e9ba.py  test_2024-06-07_16:06-2cf3fc3d3dc5.py  test_2024-06-10_09:42-f3edea6dbde2.py  test_2024-06-10_10:15-5a61f247dd07.py  test_2024-06-10_11:39-f433a0a15c7e.py  test_2024-06-10_12:02-15003e123b98.py
tests/alembic/models/rev_5a08750d6760/: test_prompt.py  test_repr_val.py  test_run.py  test_stdout.py  test_trace.py
tests/alembic/models/rev_5a08750d6760/strategies/: test_prompt.py  test_prompt_list.py  test_run.py  (+6 more)
tests/db/: models.py  test_async_db.py  test_db.py  test_foreign_keys.py
tests/models/: funcs.py  test_prompt.py  test_repr_val.py  test_run.py  test_stdout.py  test_trace.py
tests/models/strategies/: test_prompt.py  test_run.py  test_run_list.py  test_st_started_at_ended_at.py  test_stdout.py  test_trace.py  test_trace_list.py
tests/pagination/: conftest.py  funcs.py  models.py  test_falsy_id.py  test_fixture.py  test_load_models.py  test_pagination.py  test_sort.py
tests/schema/graphql/: __init__.py
tests/schema/graphql/mutations/: HistoryDeleteRuns.gql  RDBDeleteRuns.gql
tests/schema/graphql/queries/: HistoryRun.gql  RDBConnections.gql  RDBRun.gql  RDBRuns.gql
tests/schema/mutations/: test_delete_runs.py
tests/schema/queries/: test_history.py  test_pagenation.py  test_pagination.py  test_rdb.py  test_run.py
tests/schema/queries/pagination/: test_all_connection_types.py  test_cursor.py  test_error.py  test_pagination.py  test_runs.py  utils.py
tests/utils/: test_mark_last.py  test_safe_compare.py  test_safe_min_max.py  test_until.py
tests/utils/strategies/: test_st_datetime_ranges.py  test_st_datetimes.py  test_st_ints.py  test_st_min_max_tuples.py  test_st_python_scripts.py  test_st_ranges.py  test_st_sqlite_ints.py
tests/write/: test_async_write.py  test_demo_session.py  test_write.py
(+57 files in other folders)
